--- a/Game150/Game150.vcxproj.filters
+++ b/Game150/Game150.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClCompile Include="Game\Background.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Box.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Animation.h">
@@ -184,6 +187,9 @@
       <Filter>Game</Filter>
     </ClInclude>
     <ClInclude Include="Game\Background.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Box.h">
       <Filter>Game</Filter>
     </ClInclude>
   </ItemGroup>
