--- a/Game150/Game150.vcxproj.filters
+++ b/Game150/Game150.vcxproj.filters
@@ -88,6 +88,9 @@
     <ClCompile Include="Game\Box.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Wall.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Animation.h">
@@ -190,6 +193,9 @@
       <Filter>Game</Filter>
     </ClInclude>
     <ClInclude Include="Game\Box.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Wall.h">
       <Filter>Game</Filter>
     </ClInclude>
   </ItemGroup>
