--- a/Game150/Game150.vcxproj
+++ b/Game150/Game150.vcxproj
@@ -42,9 +42,13 @@
     <ClCompile Include="Engine\Window.cpp" />
     <ClCompile Include="Game\Background.cpp" />
     <ClCompile Include="Game\Box.cpp" />
+    <ClCompile Include="Game\Button.cpp" />
+    <ClCompile Include="Game\Exit.cpp" />
     <ClCompile Include="Game\Map.cpp" />
     <ClCompile Include="Game\Player.cpp" />
+    <ClCompile Include="Game\Portal.cpp" />
     <ClCompile Include="Game\Splash.cpp" />
+    <ClCompile Include="Game\Switch.cpp" />
     <ClCompile Include="Game\Wall.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
@@ -77,12 +81,16 @@
     <ClInclude Include="Engine\Window.h" />
     <ClInclude Include="Game\Background.h" />
     <ClInclude Include="Game\Box.h" />
+    <ClInclude Include="Game\Button.h" />
+    <ClInclude Include="Game\Exit.h" />
     <ClInclude Include="Game\GameObjectTypes.h" />
     <ClInclude Include="Game\Gravity.h" />
     <ClInclude Include="Game\Map.h" />
     <ClInclude Include="Game\Player.h" />
+    <ClInclude Include="Game\Portal.h" />
     <ClInclude Include="Game\Splash.h" />
     <ClInclude Include="Game\States.h" />
+    <ClInclude Include="Game\Switch.h" />
     <ClInclude Include="Game\Wall.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
