--- a/Game150/Game150.vcxproj
+++ b/Game150/Game150.vcxproj
@@ -43,6 +43,7 @@
     <ClCompile Include="Game\Background.cpp" />
     <ClCompile Include="Game\Box.cpp" />
     <ClCompile Include="Game\Button.cpp" />
+    <ClCompile Include="Game\Credit.cpp" />
     <ClCompile Include="Game\Exit.cpp" />
     <ClCompile Include="Game\Logo.cpp" />
     <ClCompile Include="Game\MainMenu.cpp" />
@@ -84,6 +85,7 @@
     <ClInclude Include="Game\Background.h" />
     <ClInclude Include="Game\Box.h" />
     <ClInclude Include="Game\Button.h" />
+    <ClInclude Include="Game\Credit.h" />
     <ClInclude Include="Game\Exit.h" />
     <ClInclude Include="Game\GameObjectTypes.h" />
     <ClInclude Include="Game\Gravity.h" />
