--- a/Game150/Game150.vcxproj.filters
+++ b/Game150/Game150.vcxproj.filters
@@ -115,6 +115,9 @@
     <ClCompile Include="Game\Credit.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Room.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Animation.h">
@@ -244,6 +247,9 @@
       <Filter>Game</Filter>
     </ClInclude>
     <ClInclude Include="Game\Credit.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Room.h">
       <Filter>Game</Filter>
     </ClInclude>
   </ItemGroup>
